{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 200,
  "lineage": "0ecc5297-6703-829f-3dd7-6b04ad17da09",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024e6efaf93d85776",
            "arn": "arn:aws:ec2:us-east-2:565134405151:instance/i-022bb6b8c7cf35b31",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-022bb6b8c7cf35b31",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ac44ae664c5085ae",
            "private_dns": "ip-10-10-0-20.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fca898b6b8f528ce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7973e497850b992",
            "tags": {
              "Name": "Instance01-subnet1a"
            },
            "tags_all": {
              "Name": "Instance01-subnet1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a53eab4a9ee4320c"
            ]
          },
          "dependencies": [
            "aws_key_pair.east2",
            "aws_security_group.allow_tls",
            "aws_subnet.east-subnet-1a",
            "aws_vpc.east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024e6efaf93d85776",
            "arn": "arn:aws:ec2:us-east-2:565134405151:instance/i-0d17228bafcdc2135",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d17228bafcdc2135",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-091e9146e7d4ee7a0",
            "private_dns": "ip-10-10-0-138.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05427133c454b8aa2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7973e497850b992",
            "tags": {
              "Name": "Instance02-subnet1a"
            },
            "tags_all": {
              "Name": "Instance02-subnet1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a53eab4a9ee4320c"
            ]
          },
          "dependencies": [
            "aws_key_pair.east2",
            "aws_security_group.allow_tls",
            "aws_subnet.east-subnet-1a",
            "aws_vpc.east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565134405151:internet-gateway/igw-098577198cbcc8401",
            "id": "igw-098577198cbcc8401",
            "owner_id": "565134405151",
            "tags": {
              "Name": "MyIG"
            },
            "tags_all": {
              "Name": "MyIG"
            },
            "vpc_id": "vpc-0775ad48a0106097b"
          },
          "dependencies": [
            "aws_vpc.east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "card-website-TG-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:565134405151:targetgroup/card-website-TG-Terraform/0e17e16084d4d375",
            "arn_suffix": "targetgroup/card-website-TG-Terraform/0e17e16084d4d375",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:565134405151:targetgroup/card-website-TG-Terraform/0e17e16084d4d375",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "card-website-TG-Terraform",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0775ad48a0106097b"
          },
          "dependencies": [
            "aws_vpc.east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TG-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:565134405151:targetgroup/card-website-TG-Terraform/0e17e16084d4d375-20230921014628444700000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:565134405151:targetgroup/card-website-TG-Terraform/0e17e16084d4d375",
            "target_id": "i-022bb6b8c7cf35b31"
          },
          "dependencies": [
            "aws_instance.web1",
            "aws_key_pair.east2",
            "aws_lb_target_group.card-website-TG-Terraform",
            "aws_security_group.allow_tls",
            "aws_subnet.east-subnet-1a",
            "aws_vpc.east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TG-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:565134405151:targetgroup/card-website-TG-Terraform/0e17e16084d4d375-20230921014628524700000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:565134405151:targetgroup/card-website-TG-Terraform/0e17e16084d4d375",
            "target_id": "i-0d17228bafcdc2135"
          },
          "dependencies": [
            "aws_instance.web2",
            "aws_key_pair.east2",
            "aws_lb_target_group.card-website-TG-Terraform",
            "aws_security_group.allow_tls",
            "aws_subnet.east-subnet-1a",
            "aws_vpc.east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-east-2RT-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565134405151:route-table/rtb-0281f788a94bbb7ed",
            "id": "rtb-0281f788a94bbb7ed",
            "owner_id": "565134405151",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "us-east-2RT-private"
            },
            "tags_all": {
              "Name": "us-east-2RT-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0775ad48a0106097b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-east-2RT-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565134405151:route-table/rtb-0be538b4f02220cd3",
            "id": "rtb-0be538b4f02220cd3",
            "owner_id": "565134405151",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-098577198cbcc8401",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-2RT-public"
            },
            "tags_all": {
              "Name": "us-east-2RT-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0775ad48a0106097b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_asso_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f105d8de827faee1",
            "route_table_id": "rtb-0be538b4f02220cd3",
            "subnet_id": "subnet-0b7973e497850b992"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.us-east-2RT-public",
            "aws_subnet.east-subnet-1a",
            "aws_vpc.east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_asso_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09412c190a7b57983",
            "route_table_id": "rtb-0be538b4f02220cd3",
            "subnet_id": "subnet-0b1f634ebb8b9ef9e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.us-east-2RT-public",
            "aws_subnet.east-subnet-1b",
            "aws_vpc.east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_asso_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b289ebc3050633f1",
            "route_table_id": "rtb-0281f788a94bbb7ed",
            "subnet_id": "subnet-0f503a7c0adcf6dcc"
          },
          "dependencies": [
            "aws_route_table.us-east-2RT-private",
            "aws_subnet.east-subnet-1c",
            "aws_vpc.east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565134405151:security-group/sg-0a53eab4a9ee4320c",
            "description": "Allow http and ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a53eab4a9ee4320c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_http_ssh",
            "name_prefix": "",
            "owner_id": "565134405151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0775ad48a0106097b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "east-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565134405151:subnet/subnet-0b7973e497850b992",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7973e497850b992",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565134405151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "east-subnet-2a"
            },
            "tags_all": {
              "Name": "east-subnet-2a"
            },
            "vpc_id": "vpc-0775ad48a0106097b"
          },
          "dependencies": [
            "aws_vpc.east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "east-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565134405151:subnet/subnet-0b1f634ebb8b9ef9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1f634ebb8b9ef9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565134405151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "east-subnet-2b"
            },
            "tags_all": {
              "Name": "east-subnet-2b"
            },
            "vpc_id": "vpc-0775ad48a0106097b"
          },
          "dependencies": [
            "aws_vpc.east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "east-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565134405151:subnet/subnet-0f503a7c0adcf6dcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f503a7c0adcf6dcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565134405151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "east-subnet-2c"
            },
            "tags_all": {
              "Name": "east-subnet-2c"
            },
            "vpc_id": "vpc-0775ad48a0106097b"
          },
          "dependencies": [
            "aws_vpc.east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "east-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565134405151:vpc/vpc-0775ad48a0106097b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0c107a810c7cf1d49",
            "default_route_table_id": "rtb-0260a1b5d64c614ff",
            "default_security_group_id": "sg-016d4823b5290b658",
            "dhcp_options_id": "dopt-01fdf6d645daac65a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0775ad48a0106097b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0260a1b5d64c614ff",
            "owner_id": "565134405151",
            "tags": {
              "Name": "US-east-2"
            },
            "tags_all": {
              "Name": "US-east-2"
            }
          }
        }
      ]
    }
  ]
}